made phone button, menu button, and dropdown menu fixed to top, seems to be a bug on mobile, pushing to update live to test on phone

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,15 +17,17 @@ body {
 
 header {
   display: grid;
-  grid-auto-flow: column;
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   padding: 10px;
+  z-index: 10000;
 
   .phone_btn {
     z-index: 9998;
+    position: fixed;
+    top: 0;
+    padding-top: 10px;
   }
 
   .logo {
@@ -36,6 +38,9 @@ header {
   }
   
   nav {
+    position: fixed;
+    right: 0;
+    padding-right: 10px;
     justify-self: end;
   }
 
@@ -89,9 +94,10 @@ header {
       width: 20px;
     }
   }
+
   .menu {
     background: url(/images/background.png);
-    position: absolute;
+    position: fixed;
     width: 100%;
     display: grid;
     justify-items: center;
